# docker-image-servers

./: Dockerfile  Dockerfile.php  Dockerfile.proxy  Makefile  README.md  certwatch  docker-entrypoint  docker-entrypoint-php  prompt
camarero/: CMakeLists.txt
camarero.v1/: CMakeLists.txt
camarero.v1/src/: server.cpp  server.h  server_yml.cpp
camarero/src/: server.cpp  server.h  server_cli.cpp  server_yml.cpp
camarero_v2/src/: server.h  server_yml.cpp
etc/nginx/includes/: default.proxy.conf
etc/nginx/yaml/: default.js.yaml  default.php.yaml
examples/: default-backend.conf  default-frontend.conf  default.backend.conf
examples/local/: default.conf
nginx/examples/: default-backend.conf  default-frontend.conf
purge/backend/: default.conf
src/: .gitignore  CMakeLists.txt  Makefile  config.yaml  config.yml  main.cpp  print_ngconf.cpp  print_server.cpp  print_server.h  server.cpp  server.h  server_cli.cpp  server_cli.h  server_yml.cpp  server_yml.h
src/charsum/: charsum.cpp
src/lib/optcheck/: CMakeLists.txt  optcheck.h
src/optcheck/: CMakeLists.txt  optcheck.cpp
src/options/: CMakeLists.txt  options.cpp  options.h
src/opts/: CMakeLists.txt  checkopt.cpp  checkopt.h
